# my_bot

./: CMakeLists.txt  package.xml  robot_core.xacro
config/: ackermann_params.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  ros2_control_servo.xacro
launch/: joystick.launch.py  launch_real_sim.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  rplidar_a1_launch.py  rsp.launch.py  simulation.launch.py
scripts/: ackermann.py
worlds/: my_world_house.world  obstacles.world
